--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "Website for Sun Mihall",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch:scss": "node-sass sass/main.scss css/style.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch:scss",
+    "compile:materialize": "node-sass sass/vendors/materialize-src/sass/materialize.scss css/materialize.comp.css",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/materialize.comp.css css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "author": "KobeDesignLab",
   "license": "ISC",
-  "dependencies": {
-    "autoprefixer": "^9.1.3",
-    "compile-sass": "0.0.5",
-    "gulp": "^3.9.1"
-  },
   "devDependencies": {
-    "gulp-sass": "^4.0.1",
-    "postcss": "^7.0.2"
-  }
+    "autoprefixer": "^9.1.5",
+    "concat": "^1.0.3",
+    "node-sass": "^4.9.3",
+    "npm-run-all": "^4.1.3",
+    "postcss-cli": "^6.0.0"
+  },
+  "dependencies": {}
 }
