--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Website for Sun Mihall",
   "main": "index.js",
   "scripts": {
-    "watch:scss": "node-sass sass/vendors/material-kit.scss assets/css/main.css -w",
+    "watch:material": "node-sass sass/vendors/material-kit.scss assets/css/main1.css -w",
+    "watch:scss": "node-sass sass/main.scss assets/css/main2.css -w",
     "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver build:css watch:scss",
+    "start": "npm-run-all --parallel devserver build:css watch:material watch:scss",
     "compile:material": "node-sass sass/vendors/material-kit.scss assets/css/material.comp.css",
     "compile:sass": "node-sass sass/main.scss assets/css/style.comp.css",
     "concat:css": "concat -o assets/css/style.concat.css assets/css/material.comp.css assets/css/style.comp.css",
